--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,2 @@
 #mongodb
-spring.data.mongodb.host=auth_db
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=auth
-# spring.data.mongodb.uri=mongodb://localhost:27017/
-
-#logging
-logging.level.org.springframework.data=debug
-#logging.level.=error
+spring.profiles.active=prod
